creacion de sesiones registro de asistencias listar sesiones generacion de QR

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,23 @@
     <string name="desc_course">Descripcion del  Curso</string>
     <string name="date_course">Fecha Final Curso</string>
     <string name="title_activity_settings">Settings</string>
+    <!-- Strings session form-->
+    <string name="title_activity_add_session">Crear Sesión</string>
+    <string name="name_session">Nombre de la Sesión</string>
+    <string name="desc_session">Descripcion de la Sesión</string>
+    <string name="date_session">Fecha de la Sesión</string>
+    <string name="time_session">Hora de la Sesión</string>
+    <string name="code_session">Código Verificador</string>
+    <string name="title_activity_camera">Buscando QR</string>
 
-    <!-- Strings related to Settings -->
+    <!-- Strings related to Course Card -->
+    <string name="name_course_card">Nombre Curso:</string>
+    <string name="desc_course_card">Descripcion:</string>
+    <string name="date_course_card">Fecha:</string>
+    <string name="session_btn_course_card">Ver Sesiones</string>
+    <!-- Strings related to session Card -->
+    <string name="assistance_btn_card">Ver Asistencia</string>
+    <string name="qr_link_btn_card">Ver QR</string>
 
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
@@ -101,4 +116,17 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+
+    <string name="ok">OK</string>
+    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
+    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
+    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
+    <string name="title_activity_main">Barcode Reader Sample</string>
+    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
+    <string name="read_barcode">Read Barcode</string>
+    <string name="auto_focus">Auto Focus</string>
+    <string name="use_flash">Use Flash</string>
+    <string name="barcode_success">Barcode read successfully</string>
+    <string name="barcode_failure">No barcode captured</string>
+    <string name="barcode_error">"Error reading barcode: %1$s"</string>
 </resources>
